--- a/packages/website/src/pages/docs/view-channel/frameworks.njk
+++ b/packages/website/src/pages/docs/view-channel/frameworks.njk
@@ -69,7 +69,7 @@ renderData:
     library. It contains a composable called <a href="/api/vue/useviewchannel/" class="high underline">useViewChannel</a>.
     The useViewChannel hook takes an instance of a ViewChannel, and it will subscribe to changes of that ViewChannel.
     This way each time a ViewChannelView is presented or dismissed Vue will automatically
-    re-render the component the useViewChannel is used in..
+    re-render the component the useViewChannel is used in.
   </p>
 
    <p>
