--- a/packages/website/src/pages/docs/typewriter/composer.njk
+++ b/packages/website/src/pages/docs/typewriter/composer.njk
@@ -1,5 +1,5 @@
 ---
-title: Composer | Typewriter | Docs | uiloos
+title: Composer | Typewriter | Docs
 layout: layouts/base.njk
 permalink: /docs/typewriter/composer/
 renderData:
@@ -67,7 +67,7 @@ renderData:
         <p class="mb-0">Total time <span id="timeline-total-time">0</span>s</p>
 
         <ul id="timeline" class="flex flex-nowrap overflow-auto max-w-7xl gap-4">
-          <li id="timeline-add-action" class="min-w-[128px] max-w-[128px] h-44 border p-4 flex flex-col justify-center items-center gap-2 cursor-pointer">
+          <li id="timeline-add-action" class="min-w-[128px] max-w-[128px] h-52 border p-4 flex flex-col justify-center items-center gap-2 cursor-pointer">
             <button type="button" class="text-purple-600 hover:text-purple-700 text-4xl" aria-labelledby="add-action">
               +
             </button>
@@ -91,9 +91,11 @@ renderData:
         you can then merge actions, or remove actions in bulk.</p>
 
         <template id="timeline-item-template">
-          <li class="timeline-item min-w-[128px] max-w-[128px] h-44 border p-4 flex flex-col items-center gap-2 cursor-grab relative" draggable="true">
-            <svg id="timeline-item-mouse" title="A mouse action" class="dark:fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 192H176V0H160C71.6 0 0 71.6 0 160v32zm0 32V352c0 88.4 71.6 160 160 160h64c88.4 0 160-71.6 160-160V224H192 0zm384-32V160C384 71.6 312.4 0 224 0H208V192H384z"/></svg>
-            <svg id="timeline-item-keyboard" title="A keyboard action" class="dark:fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M64 112c-8.8 0-16 7.2-16 16V384c0 8.8 7.2 16 16 16H512c8.8 0 16-7.2 16-16V128c0-8.8-7.2-16-16-16H64zM0 128C0 92.7 28.7 64 64 64H512c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128zM176 320H400c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H176c-8.8 0-16-7.2-16-16V336c0-8.8 7.2-16 16-16zm-72-72c0-8.8 7.2-16 16-16h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H120c-8.8 0-16-7.2-16-16V248zm16-96h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H120c-8.8 0-16-7.2-16-16V168c0-8.8 7.2-16 16-16zm64 96c0-8.8 7.2-16 16-16h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H200c-8.8 0-16-7.2-16-16V248zm16-96h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H200c-8.8 0-16-7.2-16-16V168c0-8.8 7.2-16 16-16zm64 96c0-8.8 7.2-16 16-16h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H280c-8.8 0-16-7.2-16-16V248zm16-96h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H280c-8.8 0-16-7.2-16-16V168c0-8.8 7.2-16 16-16zm64 96c0-8.8 7.2-16 16-16h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H360c-8.8 0-16-7.2-16-16V248zm16-96h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H360c-8.8 0-16-7.2-16-16V168c0-8.8 7.2-16 16-16zm64 96c0-8.8 7.2-16 16-16h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H440c-8.8 0-16-7.2-16-16V248zm16-96h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H440c-8.8 0-16-7.2-16-16V168c0-8.8 7.2-16 16-16z"/></svg>
+          <li class="timeline-item min-w-[128px] max-w-[128px] h-52 border p-4 flex flex-col items-center gap-2 cursor-grab relative" draggable="true">
+            <span id="timeline-item-cursor" class="p-2 rounded-full w-4 h-4 mb-2"></span>
+            
+            <svg class="h-6" id="timeline-item-mouse" title="A mouse action" class="dark:fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 192H176V0H160C71.6 0 0 71.6 0 160v32zm0 32V352c0 88.4 71.6 160 160 160h64c88.4 0 160-71.6 160-160V224H192 0zm384-32V160C384 71.6 312.4 0 224 0H208V192H384z"/></svg>
+            <svg class="h-6" id="timeline-item-keyboard" title="A keyboard action" class="dark:fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M64 112c-8.8 0-16 7.2-16 16V384c0 8.8 7.2 16 16 16H512c8.8 0 16-7.2 16-16V128c0-8.8-7.2-16-16-16H64zM0 128C0 92.7 28.7 64 64 64H512c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128zM176 320H400c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H176c-8.8 0-16-7.2-16-16V336c0-8.8 7.2-16 16-16zm-72-72c0-8.8 7.2-16 16-16h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H120c-8.8 0-16-7.2-16-16V248zm16-96h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H120c-8.8 0-16-7.2-16-16V168c0-8.8 7.2-16 16-16zm64 96c0-8.8 7.2-16 16-16h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H200c-8.8 0-16-7.2-16-16V248zm16-96h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H200c-8.8 0-16-7.2-16-16V168c0-8.8 7.2-16 16-16zm64 96c0-8.8 7.2-16 16-16h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H280c-8.8 0-16-7.2-16-16V248zm16-96h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H280c-8.8 0-16-7.2-16-16V168c0-8.8 7.2-16 16-16zm64 96c0-8.8 7.2-16 16-16h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H360c-8.8 0-16-7.2-16-16V248zm16-96h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H360c-8.8 0-16-7.2-16-16V168c0-8.8 7.2-16 16-16zm64 96c0-8.8 7.2-16 16-16h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H440c-8.8 0-16-7.2-16-16V248zm16-96h16c8.8 0 16 7.2 16 16v16c0 8.8-7.2 16-16 16H440c-8.8 0-16-7.2-16-16V168c0-8.8 7.2-16 16-16z"/></svg>
             
             <span id="timeline-item-position" class="font-mono"></span>
             <input id="timeline-item-key" class="w-12 text-center dark:text-white dark:bg-gray-900"/>
@@ -127,6 +129,10 @@ renderData:
        
         <p>
           Click on the rows to change the active cursor, you can also use "shift+up or shift+down" to toggle activity via keyboard.
+        </p>
+
+        <p>
+          You can also add a cursors via the shortcut code: "shift-ctrl".
         </p>
 
         <p id="cursors-position-explanation">
@@ -214,7 +220,7 @@ renderData:
       </div>
     </div>
 
-    <div class="grid gap-4 2xl:order-1 2xl:col-span-3 h-full">
+    <div class="grid gap-4 2xl:order-1 2xl:col-span-3">
       <div class="grid border shadow-lg">
         <h2 class="text-2xl mt-4 px-4">Config</h2>
 
@@ -250,6 +256,20 @@ renderData:
 
             <p>
               A fixed delay will feel less "human" and more "robotic".
+            </p>
+          </div>
+
+          <div class="grid gap-2 p-4 border-t">
+            <label for="max-delay" class="font-bold">Max delay (ms)</label>
+            <input id="max-delay" name="max-delay" class="p-2 border text-black dark:text-white dark:bg-gray-900" autocomplete="off" value="150" />
+            <p>
+              When not using a "fixed delay" the "max delay" is the maximum value a "delay" between actions can be.
+            </p>
+            <p>
+              This helps when you are not the fastest typist, or when you need some time to think!
+            </p>
+            <p>
+              Note that you can always adjust the delays in the actions directly.
             </p>
           </div>
 
