--- a/packages/website/src/pages/docs/typewriter/typewriter.njk
+++ b/packages/website/src/pages/docs/typewriter/typewriter.njk
@@ -1,10 +1,10 @@
 ---
-title: Typewriter | Docs | uiloos
+title: Typewriter | Docs
 layout: layouts/docs.njk
 permalink: /docs/typewriter/
 renderData: 
-  description: "The documentation hub page for the ViewChannel component of uiloos."
-  keywords: "uiloos ViewChannel docs, ViewChannel, ViewChannel docs"
+  description: "The documentation hub page for the Typewriter component of uiloos."
+  keywords: "uiloos Typewriter docs, Typewriter, Typewriter docs"
 ---
 
 <article>
@@ -20,22 +20,26 @@ renderData:
   >
     <div>
       <div class="text-normal font-medium mb-1">Concept</div>
-      <div class="text-sm">Learn the concepts behind the ViewChannel</div>
+      <div class="text-sm">Learn the concepts behind the Typewriter</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
     </svg>
   </a>
 
-   <a 
-    class="card" 
+  <a
+    class="card"
     href="/docs/typewriter/tutorial/"
   >
     <div>
       <div class="text-normal font-medium mb-1">Tutorial</div>
-      <div class="text-sm">Take the tutorial and build a notification center</div>
+      <div class="text-sm">Learn how to style a Typewriter</div>
     </div>
-    <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+    <svg
+      class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6"
+      viewBox="0 0 16 16"
+      xmlns="http://www.w3.org/2000/svg"
+    >
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
     </svg>
   </a>
@@ -46,7 +50,7 @@ renderData:
   >
     <div>
       <div class="text-normal font-medium mb-1">Usage with Frameworks</div>
-      <div class="text-sm">Learn how to use the ViewChannel in combination with frameworks such as React, Vue and Angular</div>
+      <div class="text-sm">Learn how to use the Typewriter in combination with frameworks such as Angular and Vue.</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
@@ -59,9 +63,26 @@ renderData:
   >
     <div>
       <div class="text-normal font-medium mb-1">Examples</div>
-      <div class="text-sm">View some examples of the ViewChannel in action</div>
+      <div class="text-sm">See the Typewriter in action with easy to copy examples</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+      <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
+    </svg>
+  </a>
+
+  <a
+    class="card"
+    href="/docs/typewriter/composer/"
+  >
+    <div>
+      <div class="text-normal font-medium mb-1">Composer</div>
+      <div class="text-sm">Use the Typewriter Composer to compose your animation</div>
+    </div>
+    <svg
+      class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6"
+      viewBox="0 0 16 16"
+      xmlns="http://www.w3.org/2000/svg"
+    >
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
     </svg>
   </a>
