--- a/packages/website/src/pages/docs/typewriter/concept.njk
+++ b/packages/website/src/pages/docs/typewriter/concept.njk
@@ -69,10 +69,10 @@ renderData:
 
     {% include './concepts/sentences/sentences.njk' %}
     {% include './concepts/multicursor/multicursor.njk' %}
-
-    {# TODO: whole word animaton #}
+    {% include './concepts/word-by-word/word-by-word.njk' %}
+    {% include './concepts/word-for-word/word-for-word.njk' %}
+    {% include './concepts/karaoke/karaoke.njk' %}
     {# TODO: word through sentence youtube like #}
-    {# TODO: word for word ala ticktock #}
   </section>
 
   <section>
