--- a/packages/website/src/pages/releases/core/core-releases.njk
+++ b/packages/website/src/pages/releases/core/core-releases.njk
@@ -35,6 +35,9 @@ renderData:
 
   <ol>
     <li>
+      <a href="/releases/core/1.2.0/" class="font-mono">1.2.0 - TODO</a>
+    </li>
+    <li>
       <a href="/releases/core/1.1.0/" class="font-mono">1.1.0 - 2022-08-31</a>
     </li>
 
