--- a/packages/website/src/pages/docs/typewriter/examples.njk
+++ b/packages/website/src/pages/docs/typewriter/examples.njk
@@ -13,9 +13,7 @@ renderData:
   <h1>Typewriter Examples</h1>
 
   <p>
-    Below are examples of how to use the ViewChannel to create dialogs,
-    modals, flash messages and a notification center. They 
-    serve as starting points for your own components.
+    Below are some examples showing you how to use the Typewriter.
   </p>
 
   <div class="grid lg:grid-cols-2 gap-4">
