--- a/packages/website/src/pages/releases/angular/angular-releases.njk
+++ b/packages/website/src/pages/releases/angular/angular-releases.njk
@@ -35,6 +35,10 @@ renderData:
 
   <ol>
     <li>
+      <a href="/releases/angular/1.2.0/" class="font-mono">1.2.0 - TODO</a>
+    </li>
+
+    <li>
       <a href="/releases/angular/1.1.0/" class="font-mono"
         >1.1.0 - 2022-08-31</a
       >
