--- a/packages/website/src/pages/docs/getting-started/overview.njk
+++ b/packages/website/src/pages/docs/getting-started/overview.njk
@@ -94,7 +94,7 @@ renderData:
 
   <p>At this moment uiloos provides the following components:</p>
 
-  <div class="max-w-sm mx-auto grid gap-6 md:grid-cols-2 lg:grid-cols-2 items-start md:max-w-2xl lg:max-w-none mb-8">
+  <div class="max-w-sm mx-auto grid gap-6 md:grid-cols-2 justify-center items-start md:max-w-2xl lg:max-w-none mb-8">
 
     <!-- 1st item -->
     <a class="relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl h-full" href="/docs/active-list/concepts/">
@@ -106,6 +106,12 @@ renderData:
     <a class="relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl h-full" href="/docs/view-channel/concepts/">
       <h3 class="high leading-snug tracking-tight mb-1">ViewChannel</h3>
       <p class="text-gray-800 dark:text-white text-center">A component to create flash message centers, modal windows, confirm dialog and notifications centers with.</p>
+    </a>
+
+    <!-- 3rd item -->
+    <a class="relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl h-full" href="/docs/typewriter/concepts/">
+      <h3 class="high leading-snug tracking-tight mb-1">Typewriter</h3>
+      <p class="text-gray-800 dark:text-white text-center">A component to create text based animation with.</p>
     </a>
   </div>
 
