--- a/packages/website/src/pages/docs/typewriter/composer.njk
+++ b/packages/website/src/pages/docs/typewriter/composer.njk
@@ -5,8 +5,8 @@ permalink: /docs/typewriter/composer/
 renderData:
   parent: 'typewriter'
   current: 'typewriter-composer'
-  description: "Shows multiple complete examples on how to use the ViewChannel from uiloos."
-  keywords: "ViewChannel examples, ViewChannel flash messages example, ViewChannel notification center example, ViewChannel modal example, ViewChannel dialog example"
+  description: "An interactive editor to make text based animations using the Typewriter component from uiloos"
+  keywords: "Typwriter composer, Typewriter editor"
   stickyNavigation: false
 ---
 
@@ -132,7 +132,7 @@ renderData:
         </p>
 
         <p>
-          You can also add a cursors via the shortcut code: "shift-ctrl".
+          You can also add a cursors via the shortcut code: "shift+esc".
         </p>
 
         <p id="cursors-position-explanation">
