--- a/packages/website/src/_includes/components/docsnav.njk
+++ b/packages/website/src/_includes/components/docsnav.njk
@@ -233,9 +233,9 @@
           <li class="py-1">
             <a 
               class="hover:underline {% if renderData and renderData.current === 'typewriter-tutorial' %} font-bold {% endif %}" 
-              href="/docs/typewriter/tutorial/"
+              href="/docs/typewriter/tutorials/"
             >
-              Tutorial
+              Tutorials
             </a>
           </li>
 
