--- a/packages/website/src/pages/docs/view-channel/concepts/initialization.njk
+++ b/packages/website/src/pages/docs/view-channel/concepts/initialization.njk
@@ -3,8 +3,8 @@
 
   <div class="js-example-switcher">
     <div class="flex bg-gray-200 dark:bg-gray-700 px-2 pt-2 pb-4 gap-4">
-      <button class="border font-bold border-0 border-b-4 hover:text-purple-500 hover:border-purple-500">JavaScript</button>
-      <button class="border font-bold border-0 border-b-4 hover:text-purple-500 hover:border-purple-500">TypeScript</button>
+      <button class="font-bold border-b-4 hover:text-purple-500 hover:border-purple-500">JavaScript</button>
+      <button class="font-bold border-b-4 hover:text-purple-500 hover:border-purple-500">TypeScript</button>
     </div>
 
     <div class="example">
