website: bug removed extra "| uiloos" in title
At one point it was added in the base template, but was forgotten to
be removed everywhere else.

--- a/packages/website/src/pages/api/core/api-pages.njk
+++ b/packages/website/src/pages/api/core/api-pages.njk
@@ -6,7 +6,7 @@ pagination:
   size: 1
   alias: def
 renderData:
-  title: "{{ def.name }} | core | API | uiloos" 
+  title: "{{ def.name }} | core | API" 
   description: "{{ def.name }} {{def.comment.shortText}}"
   keywords: "@uiloos/core {{ def.name }} API, {{ def.name }}"
 ---
