--- a/packages/website/src/pages/api/react/api-pages.njk
+++ b/packages/website/src/pages/api/react/api-pages.njk
@@ -6,7 +6,7 @@ pagination:
   size: 1
   alias: def
 renderData:
-  title: "{{ def.name }} | React | API | uiloos"
+  title: "{{ def.name }} | React | API"
   description: "{{ def.name }} {{def.comment.shortText}}"
   keywords: "@uiloos/react {{ def.name }} API, {{ def.name }}"
 ---
