--- a/packages/website/src/pages/docs/active-list/active-list.njk
+++ b/packages/website/src/pages/docs/active-list/active-list.njk
@@ -1,5 +1,5 @@
 ---
-title: ActiveList | Docs | uiloos
+title: ActiveList | Docs
 layout: layouts/docs.njk
 permalink: /docs/active-list/
 renderData: 
