--- a/packages/website/src/pages/docs/active-list/concept.njk
+++ b/packages/website/src/pages/docs/active-list/concept.njk
@@ -1,5 +1,5 @@
 ---
-title: Concepts | ActiveList | Docs | uiloos
+title: Concepts | ActiveList | Docs
 layout: layouts/docs.njk
 permalink: /docs/active-list/concepts/
 renderData:
