--- a/packages/website/src/pages/docs/active-list/examples.njk
+++ b/packages/website/src/pages/docs/active-list/examples.njk
@@ -1,5 +1,5 @@
 ---
-title: Examples | ActiveList | Docs | uiloos
+title: Examples | ActiveList | Docs
 layout: layouts/docs.njk
 permalink: /docs/active-list/examples/
 renderData:
