--- a/packages/website/src/pages/docs/active-list/frameworks.njk
+++ b/packages/website/src/pages/docs/active-list/frameworks.njk
@@ -1,5 +1,5 @@
 ---
-title: Usage with Frameworks | ActiveList | Docs | uiloos
+title: Usage with Frameworks | ActiveList | Docs
 layout: layouts/docs.njk
 permalink: /docs/active-list/usage-with-frameworks/
 renderData:
