--- a/packages/website/src/pages/docs/active-list/playground.njk
+++ b/packages/website/src/pages/docs/active-list/playground.njk
@@ -1,5 +1,5 @@
 ---
-title: Playground | ActiveList | Docs | uiloos
+title: Playground | ActiveList | Docs
 layout: layouts/docs.njk
 permalink: /docs/active-list/playground/
 renderData:
