--- a/packages/website/src/pages/docs/active-list/tutorial.njk
+++ b/packages/website/src/pages/docs/active-list/tutorial.njk
@@ -1,5 +1,5 @@
 ---
-title: Tutorial | ActiveList | Docs | uiloos
+title: Tutorial | ActiveList | Docs
 layout: layouts/docs.njk
 permalink: /docs/active-list/tutorial/
 renderData:
