--- a/packages/website/src/pages/docs/getting-started/activation.njk
+++ b/packages/website/src/pages/docs/getting-started/activation.njk
@@ -1,5 +1,5 @@
 ---
-title: activation | getting started | Docs | uiloos
+title: activation | getting started | Docs
 layout: layouts/base.njk
 permalink: /docs/getting-started/activation/
 renderData:
