--- a/packages/website/src/pages/docs/getting-started/getting-started.njk
+++ b/packages/website/src/pages/docs/getting-started/getting-started.njk
@@ -1,5 +1,5 @@
 ---
-title: getting started | Docs | uiloos
+title: getting started | Docs
 layout: layouts/docs.njk
 permalink: /docs/getting-started/
 renderData:
