--- a/packages/website/src/pages/docs/getting-started/installation.njk
+++ b/packages/website/src/pages/docs/getting-started/installation.njk
@@ -1,5 +1,5 @@
 ---
-title: installation | getting started | Docs | uiloos
+title: installation | getting started | Docs
 layout: layouts/docs.njk
 permalink: /docs/getting-started/installation/
 renderData:
