--- a/packages/website/src/pages/docs/miscellaneous/future.njk
+++ b/packages/website/src/pages/docs/miscellaneous/future.njk
@@ -1,5 +1,5 @@
 ---
-title: Future | Miscellaneous | Docs | uiloos
+title: Future | Miscellaneous | Docs
 layout: layouts/docs.njk
 permalink: /docs/miscellaneous/future/
 renderData:
