--- a/packages/website/src/pages/docs/miscellaneous/miscellaneous.njk
+++ b/packages/website/src/pages/docs/miscellaneous/miscellaneous.njk
@@ -1,5 +1,5 @@
 ---
-title: Miscellaneous | Docs | uiloos
+title: Miscellaneous | Docs
 layout: layouts/docs.njk
 permalink: /docs/miscellaneous/
 renderData: 
