--- a/packages/website/src/pages/docs/miscellaneous/rules.njk
+++ b/packages/website/src/pages/docs/miscellaneous/rules.njk
@@ -1,5 +1,5 @@
 ---
-title: Rules | Miscellaneous | Docs | uiloos
+title: Rules | Miscellaneous | Docs
 layout: layouts/docs.njk
 permalink: /docs/miscellaneous/rules/
 renderData:
