--- a/packages/website/src/pages/docs/miscellaneous/typescript.njk
+++ b/packages/website/src/pages/docs/miscellaneous/typescript.njk
@@ -1,5 +1,5 @@
 ---
-title: TypeScript | Miscellaneous | Docs | uiloos
+title: TypeScript | Miscellaneous | Docs
 layout: layouts/docs.njk
 permalink: /docs/miscellaneous/typescript/
 renderData:
