--- a/packages/website/src/pages/docs/view-channel/concept.njk
+++ b/packages/website/src/pages/docs/view-channel/concept.njk
@@ -1,5 +1,5 @@
 ---
-title: Concepts | ViewChannel | Docs | uiloos
+title: Concepts | ViewChannel | Docs
 layout: layouts/docs.njk
 permalink: /docs/view-channel/concepts/
 renderData:
