--- a/packages/website/src/pages/docs/view-channel/examples.njk
+++ b/packages/website/src/pages/docs/view-channel/examples.njk
@@ -1,5 +1,5 @@
 ---
-title: Examples | ViewChannel | Docs | uiloos
+title: Examples | ViewChannel | Docs
 layout: layouts/docs.njk
 permalink: /docs/view-channel/examples/
 renderData:
