--- a/packages/website/src/pages/docs/view-channel/frameworks.njk
+++ b/packages/website/src/pages/docs/view-channel/frameworks.njk
@@ -1,5 +1,5 @@
 ---
-title: Usage with Frameworks | ViewChannel | Docs | uiloos
+title: Usage with Frameworks | ViewChannel | Docs
 layout: layouts/docs.njk
 permalink: /docs/view-channel/usage-with-frameworks/
 renderData:
