--- a/packages/website/src/pages/docs/view-channel/view-channel.njk
+++ b/packages/website/src/pages/docs/view-channel/view-channel.njk
@@ -1,5 +1,5 @@
 ---
-title: ViewChannel | Docs | uiloos
+title: ViewChannel | Docs
 layout: layouts/docs.njk
 permalink: /docs/view-channel/
 renderData: 
