--- a/packages/website/src/pages/letters/to-designers.njk
+++ b/packages/website/src/pages/letters/to-designers.njk
@@ -1,5 +1,5 @@
 ---
-title: A Letter to Designers | uiloos
+title: A Letter to Designers
 layout: layouts/base.njk
 permalink: /letters/to-designers/
 renderData: 
