--- a/packages/website/src/pages/letters/to-developers.njk
+++ b/packages/website/src/pages/letters/to-developers.njk
@@ -1,5 +1,5 @@
 ---
-title: A letter to Developers | uiloos
+title: A letter to Developers
 layout: layouts/base.njk
 permalink: /letters/to-developers/
 renderData: 
