--- a/packages/website/src/pages/releases/angular/1.1.0.njk
+++ b/packages/website/src/pages/releases/angular/1.1.0.njk
@@ -1,5 +1,5 @@
 ---
-title: '1.1.0 | @uiloos/angular | Releases | uiloos'
+title: '1.1.0 | @uiloos/angular | Releases'
 layout: layouts/base.njk
 permalink: /releases/angular/1.1.0/
 renderData:
