--- a/packages/website/src/pages/releases/react/react-releases.njk
+++ b/packages/website/src/pages/releases/react/react-releases.njk
@@ -1,5 +1,5 @@
 ---
-title: "@uiloos/react | Releases | uiloos"
+title: "@uiloos/react | Releases"
 layout: layouts/base.njk
 permalink: /releases/react/
 renderData:
