--- a/packages/website/src/pages/releases/vue/vue-releases.njk
+++ b/packages/website/src/pages/releases/vue/vue-releases.njk
@@ -1,5 +1,5 @@
 ---
-title: "@uiloos/vue | Releases | uiloos"
+title: "@uiloos/vue | Releases"
 layout: layouts/base.njk
 permalink: /releases/vue/
 renderData:
