--- a/packages/website/src/pages/docs/getting-started/overview.njk
+++ b/packages/website/src/pages/docs/getting-started/overview.njk
@@ -1,5 +1,5 @@
 ---
-title: Overview | getting started | Docs | uiloos
+title: Overview | getting started | Docs
 layout: layouts/docs.njk
 permalink: /docs/getting-started/overview/
 renderData:
