--- a/packages/website/src/pages/docs/view-channel/tutorial.njk
+++ b/packages/website/src/pages/docs/view-channel/tutorial.njk
@@ -1,5 +1,5 @@
 ---
-title: Tutorial | ViewChannel | Docs | uiloos
+title: Tutorial | ViewChannel | Docs
 layout: layouts/docs.njk
 permalink: /docs/view-channel/tutorial/
 renderData:
