--- a/packages/website/src/pages/releases/angular/angular-releases.njk
+++ b/packages/website/src/pages/releases/angular/angular-releases.njk
@@ -1,5 +1,5 @@
 ---
-title: '@uiloos/angular | Releases | uiloos'
+title: '@uiloos/angular | Releases'
 layout: layouts/base.njk
 permalink: /releases/angular/
 renderData:
