--- a/packages/website/src/pages/releases/core/core-releases.njk
+++ b/packages/website/src/pages/releases/core/core-releases.njk
@@ -1,5 +1,5 @@
 ---
-title: "@uiloos/core | Releases | uiloos"
+title: "@uiloos/core | Releases"
 layout: layouts/base.njk
 permalink: /releases/core/
 renderData:
