--- a/packages/website/src/pages/releases/react/1.1.0.njk
+++ b/packages/website/src/pages/releases/react/1.1.0.njk
@@ -1,5 +1,5 @@
 ---
-title: "1.1.0 | @uiloos/react | Releases | uiloos"
+title: "1.1.0 | @uiloos/react | Releases"
 layout: layouts/base.njk
 permalink: /releases/react/1.1.0/
 renderData:
