--- a/packages/website/src/pages/releases/vue/1.1.0.njk
+++ b/packages/website/src/pages/releases/vue/1.1.0.njk
@@ -1,5 +1,5 @@
 ---
-title: "1.1.0 | @uiloos/vue | Releases | uiloos"
+title: "1.1.0 | @uiloos/vue | Releases"
 layout: layouts/base.njk
 permalink: /releases/vue/1.1.0/
 renderData:
