website: fixed border of tabs of typewriter concepts.
It had a strange border due to an extra border class.

--- a/packages/website/src/pages/docs/typewriter/concepts/multicursor/multicursor.njk
+++ b/packages/website/src/pages/docs/typewriter/concepts/multicursor/multicursor.njk
@@ -19,9 +19,9 @@
 
   <div class="js-example-switcher">
     <div class="flex bg-gray-200 dark:bg-gray-700 px-2 pt-2 pb-4 gap-4">
-      <button class="border font-bold border-b-4 hover:text-purple-500 hover:border-purple-500">JavaScript</button>
-      <button class="border font-bold border-b-4 hover:text-purple-500 hover:border-purple-500">HTML</button>
-      <button class="border font-bold border-b-4 hover:text-purple-500 hover:border-purple-500">CSS</button>
+      <button class="font-bold border-b-4 hover:text-purple-500 hover:border-purple-500">JavaScript</button>
+      <button class="font-bold border-b-4 hover:text-purple-500 hover:border-purple-500">HTML</button>
+      <button class="font-bold border-b-4 hover:text-purple-500 hover:border-purple-500">CSS</button>
     </div>
 
     <div class="example">
