website: added link to the Typewriter Composer on the home page

--- a/packages/website/src/pages/home/home.njk
+++ b/packages/website/src/pages/home/home.njk
@@ -19,6 +19,11 @@ renderData:
 
       <p id="home-typewriter" class="text-xl font-bold h-40 md:h-32"></p>
 
+      <p class="text-xs italic mb-8">
+        PSST: the above animation was created using the Typewriter component! 
+        <a class="underline" href="/docs/typewriter/composer">Compose your animation here.</a>
+      </p>
+
       <div class="max-w-xs mx-auto sm:max-w-none sm:flex sm:justify-center">
         <div>
           <a class="btn text-white bg-purple-600 hover:bg-purple-700 w-full mb-4 sm:w-auto sm:mb-0" href="/docs/getting-started/installation/">Getting started</a>
