website: command-k search links to methods / properties were broken.
The reason for this is because the links where lowercased in the
command-k search, but not in the API pages themselves.

Fixed by making all API links lowercased by default to prevent this.

Also closing the search modal whenever the user clicks on a result,
this prevents the modal from staying visible if the user clicks on
a result he / she is already on.

--- a/packages/website/src/pages/api/_includes/typealias.njk
+++ b/packages/website/src/pages/api/_includes/typealias.njk
@@ -45,8 +45,8 @@
 
   {% for type in properties %}
     <div class="border px-2 pt-4 mb-4">
-      <h3 class="font-mono" id="{{type.name}}">
-        <a href="#{{type.name}}">{{type.name}}</a>
+      <h3 class="font-mono" id="{{type.name.toLowerCase()}}">
+        <a href="#{{type.name.toLowerCase()}}">{{type.name}}</a>
         {% if type.flags.isOptional %}
           <span class="text-sm italic">Optional</span>
         {% else %}
