--- a/packages/website/src/pages/api/_includes/class.njk
+++ b/packages/website/src/pages/api/_includes/class.njk
@@ -27,7 +27,7 @@
               {% if not item.flags.isPrivate and item.kindString === 'Property' and not item.name.startsWith('_') %}
                 <li>
                   <a 
-                    href="#{{item.name}}" 
+                    href="#{{item.name.toLowerCase()}}" 
                     class="text-purple-600 underline block text-ellipsis overflow-hidden"
                   >
                     {{item.name}}
@@ -50,7 +50,7 @@
               {% if not item.flags.isPrivate and item.kindString === 'Method' and not item.name.startsWith('_') %}
                 <li>
                   <a 
-                    href="#{{item.name}}" 
+                    href="#{{item.name.toLowerCase()}}" 
                     class="text-purple-600 underline block text-ellipsis overflow-hidden"
                   >
                     {{item.name}}
@@ -89,7 +89,7 @@
     {% for item in def.children %}
       {% if not item.flags.isPrivate and item.kindString === 'Method' and not item.name.startsWith('_') %}
         <div class="border px-2 pt-4 mb-4">
-          <h3 class="font-mono" id="{{item.name}}"><a href="#{{item.name}}">{{item.name}}</a></h3>
+          <h3 class="font-mono" id="{{item.name.toLowerCase()}}"><a href="#{{item.name.toLowerCase()}}">{{item.name}}</a></h3>
 
           {{ displaySignatures(item.signatures, sinceRoot) }}
         </div>
