--- a/packages/website/src/pages/api/_includes/property.njk
+++ b/packages/website/src/pages/api/_includes/property.njk
@@ -2,7 +2,7 @@
 
 {% macro displayProperty(def, item, sinceRoot) %}
   <div class="border px-2 pt-4 mb-4">
-    <h3 class="font-mono" id="{{item.name}}"><a href="#{{item.name}}">{{item.name}}</a></h3>
+    <h3 class="font-mono" id="{{item.name.toLowerCase()}}"><a href="#{{item.name.toLowerCase()}}">{{item.name}}</a></h3>
 
     <p class="mb-4 font-mono">
       {{ displayType(item.type, sinceRoot) }}
