--- a/packages/website/src/pages/releases/core/core-releases.njk
+++ b/packages/website/src/pages/releases/core/core-releases.njk
@@ -35,12 +35,14 @@ renderData:
 
   <ol>
     <li>
+      <a href="/releases/core/1.2.1/" class="font-mono">1.2.1 - 2023-06-27</a>
+    </li>
+    <li>
       <a href="/releases/core/1.2.0/" class="font-mono">1.2.0 - 2023-06-22</a>
     </li>
     <li>
       <a href="/releases/core/1.1.0/" class="font-mono">1.1.0 - 2022-08-31</a>
     </li>
-
     <li>
       <a href="/releases/core/1.0.0/" class="font-mono">1.0.0 - 2022-08-26</a>
     </li>
