website: fixed links on 1.2.1 core release page.
Names should be lower cased, the nasty part is that this does work
locally but not on production.

--- a/packages/website/src/pages/releases/core/1.2.1.njk
+++ b/packages/website/src/pages/releases/core/1.2.1.njk
@@ -31,7 +31,7 @@ renderData:
   <p>Released on <span class="font-mono">2023-06-27</span></p>
 
   <p>
-    This releases fixes a bug in the <a href="/api/core/ActiveList/" class="underline high">ActiveList</a> in 
+    This releases fixes a bug in the <a href="/api/core/activeList/" class="underline high">ActiveList</a> in 
     the <a href="/api/core/activelist/#autoplay" class="underline high">autoPlay</a> behavior.
   </p>
 
@@ -50,7 +50,7 @@ renderData:
   <p>
      The effect was that subsequent durations would get shorter and shorter.
      Also it could lead to a negative duration causing a 
-     <a href="/api/core/ActiveListAutoPlayDurationError/" class="underline high">ActiveListAutoPlayDurationError</a>.
+     <a href="/api/core/activelistautoplaydurationerror/" class="underline high">ActiveListAutoPlayDurationError</a>.
   </p>
   
 </section>
