Website: added CSS snap carousel ActiveList tutorial.
Had to split up "tutorial" into "tutorials" with the old tutorial page
becoming the basic carousel tutorial.

In the navigation "tutorial" has now become "tutorials".

Also in "tutorials.json" made the ids unique.

--- a/packages/website/src/_includes/components/docsnav.njk
+++ b/packages/website/src/_includes/components/docsnav.njk
@@ -103,9 +103,9 @@
           <li class="py-1">
             <a 
               class="hover:underline {% if renderData and renderData.current === 'active-list-tutorial' %} font-bold {% endif %}" 
-              href="/docs/active-list/tutorial/"
+              href="/docs/active-list/tutorials/"
             >
-              Tutorial
+              Tutorials
             </a>
           </li>
 
