--- a/packages/website/src/pages/docs/active-list/concept.njk
+++ b/packages/website/src/pages/docs/active-list/concept.njk
@@ -525,7 +525,7 @@ renderData:
     href="/docs/active-list/tutorial/"
   >
     <div>
-      <div class="text-normal font-medium mb-1">Tutorial</div>
+      <div class="text-normal font-medium mb-1">Tutorials</div>
       <div class="text-sm">Learn how to use the ActiveList</div>
     </div>
     <svg
