--- a/packages/website/src/pages/docs/typewriter/concept.njk
+++ b/packages/website/src/pages/docs/typewriter/concept.njk
@@ -642,7 +642,7 @@ const actions = [{
     href="/docs/typewriter/tutorial/"
   >
     <div>
-      <div class="text-normal font-medium mb-1">Tutorial</div>
+      <div class="text-normal font-medium mb-1">Tutorials</div>
       <div class="text-sm">Learn how to style a Typewriter</div>
     </div>
     <svg
