--- a/packages/website/src/pages/docs/typewriter/tutorial.njk
+++ b/packages/website/src/pages/docs/typewriter/tutorial.njk
@@ -5,7 +5,7 @@ permalink: /docs/typewriter/tutorials/
 renderData:
   parent: 'typewriter'
   current: 'typewriter-tutorial'
-  description: "Lists the tutorials for the Typwriter component."
+  description: "Lists the tutorials for the Typewriter component."
   keywords: "Typewriter tutorials"
 ---
 
