feature: added Svelte bindings.
Had to add svelte to the websites home page, and to the API docs as
well. Restyled the api hub page so it is more visual.

Tiny refactoring: removed unused macros.njk imports in function.njk.

--- a/packages/website/src/_includes/components/apinav.njk
+++ b/packages/website/src/_includes/components/apinav.njk
@@ -40,6 +40,14 @@
           </div>
         </a>
       </li>
+
+      <li class="py-2">
+        <a class="flex items-center hover:underline" href="/api/svelte/">
+          <div class="flex items-center grow">
+            <span>Svelte</span>
+          </div>
+        </a>
+      </li>
     </ul>
   </nav>
 </aside>
