--- a/packages/website/src/pages/api/_includes/function.njk
+++ b/packages/website/src/pages/api/_includes/function.njk
@@ -1,4 +1,4 @@
-{% from "./macros.njk" import displayName, displayType, displaySignature, displaySince, displayComment %}
+{% from "./macros.njk" import displayName, displaySignature %}
 
 {% macro functionPage(def) %}
   <article>
