--- a/packages/website/src/pages/home/home.njk
+++ b/packages/website/src/pages/home/home.njk
@@ -499,28 +499,30 @@ keywords: "uiloos, headless ui, component library, common web behaviors, javascr
   </div>
 
   <!-- Items -->
-  <div class="max-w-sm mx-auto grid gap-6 md:grid-cols-3 lg:grid-cols-3 items-start md:max-w-2xl lg:max-w-none">
-
-    <!-- 1st item -->
-    <div class="relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl h-full">
+  <div class="flex flex-wrap justify-center items-stretch gap-8">
+    <div class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl">
       <img src="/images/frameworks/react.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="React logo" />
       <h3 class="font-bold leading-snug tracking-tight mb-1">React</h3>
       <p class="text-gray-800 dark:text-white text-center">Use ready made React components and hooks.</p>
     </div>
-
-    <!-- 2nd item -->
-    <div class="relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl h-full">
+    
+    <div class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl">
       <img src="/images/frameworks/vue.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="Vue logo"/>
       <h3 class="font-bold leading-snug tracking-tight mb-1">Vue</h3>
       <p class="text-gray-800 dark:text-white text-center">Use pre-baked Vue components and composables.</p>
     </div>
 
-    <!-- 3rd item -->
-    <div class="relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl h-full">
+    <div class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl">
+      <img src="/images/frameworks/svelte.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="JavaScript unofficial logo" />
+      <h3 class="font-bold leading-snug tracking-tight mb-1">Svelte</h3>
+      <p class="text-gray-800 dark:text-white text-center">Use predefined Svelte store</p>
+    </div>
+
+    <div class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl">
       <img src="/images/frameworks/vanilla.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="JavaScript unofficial logo" />
       <h3 class="font-bold leading-snug tracking-tight mb-1">Vanilla</h3>
       <p class="text-gray-800 dark:text-white text-center">Or use no framework at all and listen to changes yourself</p>
-    </div>
+    </div>  
   </div>
 </section>
 
