--- a/packages/website/src/pages/api/api.njk
+++ b/packages/website/src/pages/api/api.njk
@@ -11,8 +11,9 @@ keywords: "uiloos API, uiloos api"
 
 <article>
   <h1>API</h1>
+  
   <p>
-    The uiloos API is divided in several two parts: 
+    The uiloos API is divided in two parts: 
   </p>
 
   <p>
@@ -23,12 +24,32 @@ keywords: "uiloos API, uiloos api"
   <p>
     The second part consists of packages which make using uiloos easier in 
     various front-end frameworks by providings framework specific bindings.
+  </p>
+
+  <p>
     Currently there are bindings for:
   </p>
 
-  <ul class="list-decimal ml-5">
-    <li class="mb-2"><a class="underline text-purple-600" href="react/">React</a></li>
-    <li class="mb-2"><a class="underline text-purple-600" href="vue/">Vue</a></li>
-    <li class="mb-2"><a class="underline text-purple-600" href="angular/">Angular</a></li>
-  </ul>
+  <!-- Items -->
+  <div class="flex flex-wrap justify-center items-stretch gap-8 mb-8 md:mb-0">
+    <a href="/api/react" class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl">
+      <img src="/images/frameworks/react.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="React logo" />
+      <span class="text-2xl font-bold leading-snug tracking-tight mb-1">React</span>
+    </a>
+    
+    <a href="/api/vue" class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl">
+      <img src="/images/frameworks/vue.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="Vue logo"/>
+      <span class="text-2xl font-bold leading-snug tracking-tight mb-1">Vue</span>
+    </a>
+
+    <a href="/api/svelte" class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl">
+      <img src="/images/frameworks/svelte.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="JavaScript unofficial logo" />
+      <span class="text-2xl font-bold leading-snug tracking-tight mb-1">Svelte</span>
+    </a>
+
+    <a href="/api/angular" class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl">
+      <img src="/images/frameworks/angular.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="JavaScript unofficial logo" />
+      <span class="text-2xl font-bold leading-snug tracking-tight mb-1">Angular</span>
+    </a>  
+  </div>
 </article>
